15-OCI-Cluster-Kubernetes/06-Tüm-Uygulama-Ingress/Tüm-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-nodeport-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: merhaba.techakademi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: merhaba-servisi
            port:
              number: 80
  - host: whoami.techakademi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: whoami-servisi
            port:
              number: 80
